# VRC-voice-trigger-local-server

./: .gitignore  .¥¥TriggerSettings¥¥VoiceTriggerTesting.json  LICENCE  Pipfile  local_server.py  osc_sender.py  pyproject.toml  requirements.txt  test_socket_client.py  trigger_data.py  trigger_selector.py  trigger_setting.json  trigger_settings_loader.py  utility.py  voice_trigger.py
TriggerSettings/: FigureAvaterTest.json  NPC talk test.json  VoiceTriggerTesting.json  avatar_param_test.json  test2.json  test_setting.json  trigger_setting.json
