[project]
name = "vrc-voice-trigger-local-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.3",
    "astroid==2.11.7",
    "future==0.18.3",
    "isort==5.10.1",
    "lazy-object-proxy==1.7.1",
    "macholib==1.16.2",
    "mccabe==0.7.0",
    "pefile==2023.2.7",
    "pyinstaller==5.13.1",
    "pylint==2.2.2",
    "python-osc>=1.9.3",
    "setuptools==78.1.1",
    "six==1.16.0",
    "typed-ast==1.5.5",
    "typing-extensions==4.1.1",
    "websocket-client==0.54.0",
    "websocket-server>=0.6.4",
    "wrapt==1.15.0",
]
